[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-async"
version = "0.1.2"
description = "Thread based async library for python"
readme = "README.md"
authors = [{ name = "Bowen Feng", email = "857514.leofeng@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["async", "threads"]
requires-python = ">=3.7"